feat: 增加领域搜索用户名列表
