# docs/swagger.json
@@ -9,6 +9,56 @@
     "host": "127.0.0.1:9000",
     "basePath": "/",
     "paths": {
+        "/field/list": {
+            "get": {
+                "description": "获取领域下的用户列表",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Field"
+                ],
+                "summary": "获取领域下的用户列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "TagnUUID",
+                        "name": "uuid",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "页码（默认：1）",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "每页数量（默认：10）",
+                        "name": "pageSize",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.UsernameListResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.OperationResp"
+                        }
+                    }
+                }
+            }
+        },
         "/github/user/events": {
             "get": {
                 "description": "获取开发者活动数据",
@@ -1425,6 +1475,20 @@
                 },
                 "tag": {
                     "$ref": "#/definitions/model.Tag"
+                }
+            }
+        },
+        "model.UsernameListResp": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
